[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/player_ui/weapon_melee.png" type="Texture" id=1]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/player_ui/weapon_seal.png" type="Texture" id=3]
[ext_resource path="res://ui/player_ui/PlayerUI.gd" type="Script" id=4]
[ext_resource path="res://ui/player_ui/weapon_needle.png" type="Texture" id=5]
[ext_resource path="res://fonts/SawarabiMincho/SawarabiMincho-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/Lifebar.png" type="Texture" id=7]
[ext_resource path="res://ui/LifebarR.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="Left" type="TextureProgress" parent="VBoxContainer/Life"]
margin_right = 128.0
margin_bottom = 8.0
value = 100.0
texture_progress = ExtResource( 7 )
fill_mode = 1

[node name="Right" type="TextureProgress" parent="VBoxContainer/Life"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 8.0
value = 100.0
texture_progress = ExtResource( 8 )

[node name="LabelTime" type="Label" parent="VBoxContainer"]
margin_left = 107.0
margin_top = 8.0
margin_right = 149.0
margin_bottom = 26.0
size_flags_horizontal = 4
text = "00:00"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 256.0
margin_bottom = 116.0
size_flags_vertical = 3

[node name="Weapons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 256.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="melee" type="Panel" parent="VBoxContainer/Weapons"]
margin_left = 110.0
margin_right = 126.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 28 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Weapons/melee"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Weapons/melee/VBoxContainer"]
margin_right = 20.0
margin_bottom = 16.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="VBoxContainer/Weapons/melee/VBoxContainer"]
margin_top = 14.0
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 12 )
custom_fonts/font = SubResource( 1 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seal" type="Panel" parent="VBoxContainer/Weapons"]
margin_left = 130.0
margin_right = 146.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 28 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Weapons/seal"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Weapons/seal/VBoxContainer"]
margin_right = 20.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="VBoxContainer/Weapons/seal/VBoxContainer"]
margin_top = 14.0
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 12 )
custom_fonts/font = SubResource( 1 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="needle" type="Panel" parent="VBoxContainer/Weapons"]
visible = false
margin_left = 139.0
margin_right = 157.0
margin_bottom = 27.366
rect_min_size = Vector2( 18, 28 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Weapons/needle"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Weapons/needle/VBoxContainer"]
margin_right = 20.0
margin_bottom = 16.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="VBoxContainer/Weapons/needle/VBoxContainer"]
margin_top = 14.0
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 12 )
custom_fonts/font = SubResource( 1 )
text = "100"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="SecondTimer" type="Timer" parent="."]

[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
